--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Home</title>
 </head>
 <body>
-    <h1>HOME</h1>
+    <div class="halo">
+        <div class="qiqi">
+            <img src="/src/qiqi-genshin-impact-qiqi.gif">
+        </div>
+        <div class="halo2">
+            <h1>HALAMAN INI BELUM JADI</h1>
+        </div>
+        <div class="hh2warp">
+            <div class="hh1">
+                <a>SILAHKAN KE ></a>
+            </div>
+            <div class="hh2">
+                <a href="/role.html">PAGE INI</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
