--- a/role.html
+++ b/role.html
@@ -107,7 +107,7 @@
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
                                                 <span class="badge-super2">CUSTOM</span>
-                                                <span class="badge-super3">1.000.000</span>
+                                                <span class="badge-super3">10.000.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -119,7 +119,7 @@
                         <div class="bubble-msg">
                             <div class="slcc">
                                 <div class="pfp">
-                                    <img src="/src/user.png"> 
+                                    <img src="/src//23232.jpg"> 
                                     <div class="user-1">
                                         <div class="username">
                                             DIMAS
@@ -128,7 +128,7 @@
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
                                                 <span class="badge-subscription">SUBSCRIPTION</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">150.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -143,12 +143,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            DANIBUKANKARBIT09117
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">110.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -170,12 +170,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            ORANGLEMBUT
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">102.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -190,12 +190,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            TSPMO
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">48.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -210,12 +210,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            LOREMIPSUM
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">40.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -237,12 +237,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            J*K*WI
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">60.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -257,12 +257,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            PALEMBANGNIHBOS
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">90.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -277,12 +277,12 @@
                                     <img src="/src/user.png"> 
                                     <div class="user-1">
                                         <div class="username">
-                                            DIMAS
+                                            SUKALOLI
                                         </div>
                                         <div class="role-s1">
                                             <div class="role-s2">
                                                 <span class="badge-super1">SUPPORTER</span>
-                                                <span class="badge-standar">50.000</span>
+                                                <span class="badge-standar">97.000</span>
                                             </div>
                                         </div>
                                     </div>
@@ -302,6 +302,9 @@
                 </a>
             </div>
 
+            <div class="floating">
+                <a>WORK IN PROGRESS</a>
+            </div>
 
             </div>
         </div>
