--- a/role.html
+++ b/role.html
@@ -20,65 +20,66 @@
                 </div>
             </h1>
        </div>
-       <br>
-       <br>
         <div class="main-role">
             <h2>MANAGER</h2>
-            <div class="role">
-                <div class="clss">
-                    <div class="user">
-                        <div class="profile">
-                            <a href="https://www.instagram.com/vz.kinz" rel="nofollow" title="@vz.kinz"><img src="/src/vzkinz.png">
-                            <h3>KINZ</a></h3>  
-                            <div class="status-role">
-                                <span class="badge-owner" title="OWNER EASYEASE">OWNER</span>
-                                <span class="badge-status" title="AMV CREATOR">AMV</span>
-                                <span class="badge-status" title="TWIXTOR ASSET">TWIXTOR</span>
+            <div class="serole">
+                <div class="role">
+                    <div class="clss">
+                        <div class="user">
+                            <div class="profile">
+                                <a href="https://www.instagram.com/vz.kinz" rel="nofollow" title="@vz.kinz"><img src="/src/vzkinz.png">
+                                <h3>KINZ</h3></a>  
+                                <div class="status-role">
+                                    <span class="badge-owner" title="OWNER EASYEASE">OWNER</span>
+                                    <span class="badge-status" title="AMV CREATOR">AMV</span>
+                                    <span class="badge-status" title="TWIXTOR ASSET">TWIXTOR</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clss">
+                        <div class="user">
+                            <div class="profile">
+                                <a href="https://www.instagram.com/" rel="nofollow" title="@vz.kinz"><img src="/src/23232.jpg">
+                                <h3>?</h3></a>
+                                <div class="status-role">
+                                    <span class="badge-admin" title="ADMIN EASYEASE">ADMIN</span>
+                                    <span class="badge-status" title="AMV CREATOR">AMV</span>
+                                    <span class="badge-security" title="SECURITY">SECURITY</span>
+                                </div>  
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="clss">
-                    <div class="user">
-                        <div class="profile">
-                            <a href="https://www.instagram.com/ardan.psd rel="nofollow" title="@ardan.psd"><img src="/src/ardan.png">
-                            <h3>ARDAN</a></h3>  
-                            <div class="status-role">
-                                <span class="badge-admin" title="ADMIN EASYEASE">ADMIN</span>
-                                <span class="badge-status" title="GFX CRATOR">GFX</span>
-                                <span class="badge-status" title="GFX ASSET">ASSET-GFX</span>
+                <div class="role">
+                    <div class="clss">
+                        <div class="user">
+                            <div class="profile">
+                                <a href="https://www.instagram.com/ardan.psd" rel="nofollow" title="@ardan.psd"><img src="/src/ardan.png">
+                                <h3>ARDAN</h3></a>  
+                                <div class="status-role">
+                                    <span class="badge-admin" title="ADMIN EASYEASE">ADMIN</span>
+                                    <span class="badge-status" title="GFX CRATOR">GFX</span>
+                                    <span class="badge-status" title="GFX ASSET">ASSET-GFX</span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="clss">
-                    <div class="user">
-                        <div class="profile">
-                            <a href="#" rel="nofollow" title="@user"><img src="/src/user1.gif">
-                            <h3>USER</a></h3>  
-                            <div class="status-role">
-                                <span class="badge-supportsys" title="COLLECTING ASSETS">HELPER</span>
-                                <span class="badge-status" title="GFX CRATOR">GFX</span>
-                                <span class="badge-supporter" title="SUPPORTING EASYEASE">SUPPORTER</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="clss">
-                    <div class="user">
-                        <div class="profile">
-                            <a href="#" rel="nofollow" title="@user"><img src="/src/user3.gif">
-                            <h3>USER</a></h3>  
-                            <div class="status-role">
-                                <span class="badge-security" title="ASSET SECURITY">SECURITY</span>
-                                <span class="badge-status" title="GFX CRATOR">GFX</span>
-                                <span class="badge-supervisor" title="SUPERVISOR">SUPERVISOR</span>
+                    <div class="clss">
+                        <div class="user">
+                            <div class="profile">
+                                <a href="https://www.instagram.com/" rel="nofollow" title="?"><img src="/src//user3.gif">
+                                <h3>?</h3></a>  
+                                <div class="status-role">
+                                    <span class="badge-supportsys" title="SUPPORT">SUPPORT<SUPPORT></span>
+                                    <span class="badge-status" title="GFX CRATOR">GFX</span>
+                                    <span class="badge-supporter" title="SUPPORTER">SUPPORTER</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
 
             <!-- supporter -->
 
@@ -112,7 +113,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>    
+                            </div> 
                         </div>
                     </div>
                     <div class="bubble-padding">
