--- a/index.html
+++ b/index.html
@@ -3,25 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style/style-home.css">
     <title>Home</title>
 </head>
 <body>
-    <div class="halo">
-        <div class="qiqi">
-            <img src="/src/qiqi-genshin-impact-qiqi.gif">
-        </div>
-        <div class="halo2">
-            <h1>HALAMAN INI BELUM JADI</h1>
-        </div>
-        <div class="hh2warp">
-            <div class="hh1">
-                <a>SILAHKAN KE ></a>
+    <div class="fContainer">
+        <div class="wrapper">
+            <div class="brand">
+                <a href="#">
+                    <div class="brand1">EASY</div>
+                    <div class="brand2">EASE</div>
+                </a>
             </div>
-            <div class="hh2">
-                <a href="/role.html">PAGE INI</a>
+            <div class="content">
+                <a href="/role.html"><button>ROLE</button></a>
+                <a href="#"><button>SOURCE</button></a>
             </div>
         </div>
+    </div>
+    <div class="content404">
+        <div class="cont">
+            <div class="gambar">
+                <img src="/src//custom.gif">
+            </div>
+            <div class="keterangan">
+                <center>Sorry, the content on this <br>page is not yet available</center>
+            </div>
+        </div>
+    </div>
+    <div class="floating">
+        <a>WORK IN PROGRESS</a>
     </div>
 </body>
 </html>
