--- a/role.html
+++ b/role.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style/style-role.css">
     <link rel="icon" type="image/x-icon" href="src/icon/easyease.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Role - EasyEase</title>
@@ -13,10 +13,11 @@
     <div class="container">
        <div class="m1">
             <h1>
-                <a href="#"><i style="font-size:30px" class="fa">&#xf104;</i></a>
                 <div class="name">
-                    <div class="name1">ROLE</div>
-                    <div class="name2">EASYEASE</div>
+                    <a href="/index.html">
+                        <div class="name1">ROLE</div>
+                        <div class="name2">EASYEASE</div>
+                    </a>
                 </div>
             </h1>
        </div>
@@ -40,7 +41,7 @@
                     <div class="clss">
                         <div class="user">
                             <div class="profile">
-                                <a href="https://www.instagram.com/" rel="nofollow" title="@vz.kinz"><img src="/src/23232.jpg">
+                                <a href="https://www.instagram.com/" rel="nofollow" title="?"><img src="/src/23232.jpg">
                                 <h3>?</h3></a>
                                 <div class="status-role">
                                     <span class="badge-admin" title="ADMIN EASYEASE">ADMIN</span>
@@ -297,17 +298,15 @@
             <!-- supporter -->
 
 
-            <div class="penutup">
-                <a>
-                    EASYEASE COPYRIGHT 2025
-                </a>
+                <div class="penutup">
+                    <a>
+                        EASYEASE COPYRIGHT 2025
+                    </a>
+                </div>
             </div>
-
-            <div class="floating">
-                <a>WORK IN PROGRESS</a>
-            </div>
-
-            </div>
+        </div>
+        <div class="floating">
+            <a>WORK IN PROGRESS</a>
         </div>
        </div>
     </div>
